@@ -52,7 +52,7 @@ PERL       = $(shell which perl)
 PERLLIB    = $(DESTDIR)$(shell $(PERL) -V:sitelib | cut -d= -f2 | sed "s/[\';]//g")
 
 # Client only - Install plugins for this architecture
-ARCH       = $(shell uname | tr '[A-Z]' '[a-z]')
+OSTYPE     = $(shell uname | tr '[A-Z]' '[a-z]')
 
 # How to figure out the hostname. (Only used in default configuration
 # files)
